Refactor about page testimonials and client section

--- a/about.html
+++ b/about.html
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <!-- TESTIMONIAL BLOCK END -->
-                <div class="testimonial-block about-testi">
+                <!-- <div class="testimonial-block about-testi">
                     <div class="background-overlay"> </div>
                     <div class="testimonial-background"></div>
                     <div class="testimonial-wrap">
@@ -261,49 +261,10 @@
 
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- TESTIMONIAL BLOCK END -->
 
-                <!-- CLIENT BLOCK -->
-                <div class="client-about">
-                    <div class="container">
-                        <div class="client-wrap grid grid-cols-12 gap-10">
-                            <div class="the-title text-left col-span-4 sm:col-span-2 res:col-span-12">
-                                <h5 class="head-title-2" data-aos="fade-up"> /PARTNERS </h5>
-                                <h2 class="head-title-1"> Social Channels & Sponsors
-                                    <span class="title-end">.</span></h2>
-                            </div>
-                            <div class="client-inner-content col-span-8 sm:col-span-12 res:col-span-12 grid grid-cols-6">
-                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
-                                    <a href="#">
-                                        <img src="img/client.-1.png" alt="client-1">
-                                    </a>
-                                </div>
-                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
-                                    <a href="#">
-                                        <img src="img/client.-2.png" alt="client-2">
-                                    </a>
-                                </div>
-                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
-                                    <a href="#">
-                                        <img src="img/client.-3.png" alt="client-3">
-                                    </a>
-                                </div>
-                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
-                                    <a href="#">
-                                        <img src="img/client.-4.png" alt="client-4">
-                                    </a>
-                                </div>
-                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
-                                    <a href="#">
-                                        <img src="img/client.-5.png" alt="client-5">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- CLIENT BLOCK END -->
+     
 
                 <!-- WAITING BLOCK -->
                 <div class="waiting-block">
