Refactor testimonial block in about page

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <!-- BLOG LOOP END -->
 
             <!-- TESTIMONIAL BLOCK -->
-            <div class="testimonial-block">
+            <!-- <div class="testimonial-block">
                 <div class="background-overlay"> </div>
                 <div class="testimonial-background"></div>
                 <div class="testimonial-wrap">
@@ -381,7 +381,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- TESTIMONIAL BLOCK END -->
 
             <!-- BOOK TABLE -->
