--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,9 @@
 
             <!-- HEADER START
             ============================================= -->
+            <a target="_blank" href="https://wa.me/+573105561747" style="position: fixed; z-index: 50; bottom: 15px; left: 15px;" class="fixed z-50 bottom-5 left-5">
+                <img class="w-16 rounded-full" style="border-radius: 50%; width: 60px;"  src="https://getchat.app/assets/img/whatsapp-large.png" alt="whatsapp button">
+            </a>
             <header id="header" class="header-style-1">
                 <div class="container">
                     <div class="row clearfix">
