Refactor image title in index.html

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <div class="image-background">
                 </div>
                 <div class="image-title">
-                    <p>At vero eos et accusamus et iusto odio dignissimos</p>
-                    <p> ducimus qui blanditiis</p>
+                    <p>Soluciones en alquiler, mantenimiento y venta </p>
+                    <p> de audiovisulaes</p>
                     <a href="#" class="button-basic-1" data-aos="fade-up">All Events</a>
                 </div>
                 <div class="video-background">
