Refactor about page to update services section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,17 @@
                 </div>
             </div>
 
-            <section class="content">
+            <section class="content ">
+                <br>
+                <br>
+                <br>
+                <br>
+                <div class="the-title text-left col-span-4 sm:col-span-2 res:col-span-12 container">
+                    <h5 class="head-title-2" data-aos="fade-up"> /Serivios </h5>
+                    <h2 class="head-title-1"> Nuestros principales servicios
+                        <span class="title-end">.</span>
+                    </h2>
+                </div>
                 <!-- BLOG POST -->
                 <div class="page-blog blog-post">
                     <div class="container clearfix content_services">
