Refactor about page to update services section

--- a/event.html
+++ b/event.html
@@ -285,7 +285,7 @@
                         <div class="post-content-wrap col-span-6 sm:col-span-12 res:col-span-12">
                             <div class="loop-post-head the-post-head clearfix">
                                 <div class="standard-post-categories span-head">
-                                    <a href="#">  ${service.CATEGORY} </a>
+                                    <a href="#" style="text-transform: uppercase;">  ${service.CATEGORY} </a>
                                 </div>
                                 <h2 class="post-title entry-title" style="color:white;">
                                     <a href="#">
