--- a/contact.html
+++ b/contact.html
@@ -117,8 +117,8 @@
                                     <div class="dugem-text clearfix">
                                         <h3 class="text-white">Our Location</h3>
                                         <p>Calle 66b #68b-51 - 302</p>
-                                        <p>+57 +57 310 5561747</p>
-                                        <p>+57 +57 315 8846721</p>
+                                        <p style="color:white !important">+57 +57 310 5561747</p>
+                                        <p style="color:white !important">+57 +57 315 8846721</p>
                                     </div>
 
                                 </div>
