--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="image-title">
                     <p>Soluciones en alquiler, mantenimiento y venta </p>
                     <p> de audiovisulaes</p>
-                    <a href="#" class="button-basic-1" data-aos="fade-up">All Events</a>
+                    <a href="event.html" class="button-basic-1" data-aos="fade-up">Ver Servicios</a>
                 </div>
                 <div class="video-background">
                     <video autoplay muted loop id="myVideo">
@@ -106,7 +106,7 @@
                 <br>
                 <br>
                 <div class="the-title text-left col-span-4 sm:col-span-2 res:col-span-12 container">
-                    <h5 class="head-title-2" data-aos="fade-up"> /Serivios </h5>
+                    <h5 class="head-title-2" data-aos="fade-up"> /Servicios </h5>
                     <h2 class="head-title-1"> Nuestros principales servicios
                         <span class="title-end">.</span>
                     </h2>
