update main services

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 </head>
 
 <body class="demo-1">
-    
+
     <!--MAIN WRAPPER START-->
     <div class="main-wrapper clearfix">
-        <a target="_blank" href="https://wa.me/+573105561747" style="position: fixed; z-index: 50; bottom: 15px; right: 15px;" class="fixed z-50 bottom-5 left-5">
-            <img class="w-16 rounded-full" style="border-radius: 50%; width: 60px;"  src="https://getchat.app/assets/img/whatsapp-large.png" alt="whatsapp button">
+        <a target="_blank" href="https://wa.me/+573105561747"
+            style="position: fixed; z-index: 50; bottom: 15px; right: 15px;" class="fixed z-50 bottom-5 left-5">
+            <img class="w-16 rounded-full" style="border-radius: 50%; width: 60px;"
+                src="https://getchat.app/assets/img/whatsapp-large.png" alt="whatsapp button">
         </a>
         <!-- HEADER START
                 ============================================= -->
@@ -114,7 +116,7 @@
                 <!-- BLOG POST -->
                 <div class="page-blog blog-post">
                     <div class="container clearfix content_services">
-                  
+
                     </div>
                 </div>
             </section>
@@ -477,21 +479,21 @@
         const SERVICES = [
             {
                 NAME: 'VIDEO PROYECTORES',
-                DESCRIPTION: 'Desde 2.000 hasta 25.000 lumens , FULL HD, 4K, láser, led, tiro corto e interactivos, mantenimiento, accesorios, bombilleria, cableado y soportes.',
-                IMAGE: 'https://i.blogs.es/739ed4/apertura-proyectores-cine-en-casa/1366_2000.jpeg',
-                CATEGORY: 'ALQUILER'
-            },
-            {
-                NAME: 'Sonido',
-                DESCRIPTION: 'Servicio de mantenimiento y reparación de equipos de sonido.',
-                IMAGE: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2gDSa607CSxHL0DCu_xR5agMZyZi5s-Pd-r8j_ZGIWnXsmSRS_ROBD7AcHaQz1Hc6VMo&usqp=CAU',
-                CATEGORY: 'Mantenimiento y reparación'
+                DESCRIPTION: 'Desde 2.000 hasta 25.000 lumens , FULL HD, 4K, láser, led, tiro corto e interactivos,  mantenimiento , accesorios, bombilleria, cableado y soportes.',
+                IMAGE: 'https://mediaserver.goepson.com/ImConvServlet/imconv/296ae1b08e0d65f1f8301d4fca066e6888024a67/1200Wx1200H?use=banner&hybrisId=B2C&assetDescr=g7000w_w_01',
+                CATEGORY: [' ALQUILER ', ' MANTENIMIENTO ', ' VENTA ']
             },
             {
                 NAME: 'SONIDO PROFESIONAL',
-                DESCRIPTION: 'Consolas análogas, digitales, mezcladores, potencias, parlantes, cabinas de sonido, monitores, bases, cableado y accesorios.',
+                DESCRIPTION: 'Consolas análogas, digitales, mezcladores, potencias, parlantes, cabinas de sonido, monitores, bases, cableado y accesorios',
                 IMAGE: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUlMGrd0sVNfcvgI58eoomeVgw4fc617MnF2JH-4BIdg&s',
-                CATEGORY: 'ALQUILER'
+                CATEGORY: [' ALQUILER ', ' MANTENIMIENTO ', ' VENTA ']
+            },
+            {
+                NAME: 'LOGISTICA PARA ASAMBLEAS',
+                DESCRIPTION: 'Sistemas de votación para asamblea, creación del acta, asambleas mixtas, sonido, pantallas de proyección, computadores, grabación de audio y video, registro de quorum.',
+                IMAGE: 'https://i.postimg.cc/WbGC0Vfz/imagen-2024-05-17-101402105.png',
+                CATEGORY: [' ALQUILER ', ' MANTENIMIENTO ', ' VENTA ']
             },
         ]
         $(document).ready(function () {
