Refactor contact page to update phone numbers and form validation

--- a/contact.html
+++ b/contact.html
@@ -104,28 +104,29 @@
                                         Si tienes alguna duda o necesitas más información, no dudes en contactarnos. Estamos aquí para ayudarte.
                                     </p>
                                 </div>
-                                <div class="contact-form-style">
-                                    <input type="text" name="your-name" size="40" placeholder="Nombre">
-                                    <input type="text" name="your-name" size="40" placeholder="Teléfono">
-                                    <textarea name="Tu mensaje" cols="40" rows="10" placeholder="Text"></textarea>
+                                <form class="contact-form-style" action="https://formspree.io/f/meqywoop" method="post">
+                                    <input  required type="text" maxlength="150"   name="name" size="40" placeholder="Nombre">
+                                    <input required  type="text" maxlength="15" name="phone" size="40" placeholder="Teléfono">
+                                    <textarea required maxlength="500"  name="message" cols="40" rows="10" placeholder="Tu mensaje"></textarea>
                                     <input type="submit" value="Enviar" class="button-basic-1">
-
-                                </div>
+                                </form>
                             </div>
                             <div class="title-side col-span-3 sm:col-span-12 res:col-span-12">
                                 <div class="block-location">
                                     <div class="dugem-text clearfix">
-                                        <h3 class="text-white">Our Location</h3>
+                                        <h3 class="text-white">Nuestra ubicación</h3>
                                         <p>Calle 66b #68b-51 - 302</p>
-                                        <p style="color:white !important">+57 +57 310 5561747</p>
-                                        <p style="color:white !important">+57 +57 315 8846721</p>
+                                        <p style="color:white !important;font-size: 15px;"> +57 310 5561747</p>
+                                        <p style="color:white !important;font-size: 15px;"> +57 315 8846721</p>
                                     </div>
 
                                 </div>
                                 <div class="block-location">
                                     <div class="dugem-text clearfix">
-                                        <h3 class="text-white">Email</h3>
-                                        <p>contacto@videoimagen.com.co</p>
+                                        <h3 class="text-white">Corres</h3>
+                                        <p style="font-size: 15px;">contacto@videoimagen.com.co</p>
+                                        <p style="font-size: 15px;">angel@videoimagen.com.co</p>
+                                        <p style="font-size: 15px;">valeria@videoimagen.com.co</p>
                                     </div>
                                 </div>
                             </div>
