--- a/event.html
+++ b/event.html
@@ -179,7 +179,7 @@
                 NAME: 'LOGISTICA PARA ASAMBLEAS',
                 DESCRIPTION: 'Sistemas de votación para asamblea, creación del acta, asambleas mixtas, sonido, pantallas de proyección, computadores, grabación de audio y video, registro de quorum.',
                 IMAGE: 'https://i.postimg.cc/WbGC0Vfz/imagen-2024-05-17-101402105.png',
-                CATEGORY: [' ALQUILER ', ' MANTENIMIENTO ', ' VENTA ']
+                CATEGORY: [' ALQUILER ']
             },
             {
                 NAME: 'LAMPARAS PARA VIDEO PROYECTORES',
