--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
                                 </div>
                                 <div class="block-location">
                                     <div class="dugem-text clearfix">
-                                        <h3 class="text-white">Corres</h3>
+                                        <h3 class="text-white">Correos corporativos</h3>
                                         <p style="font-size: 15px;">contacto@videoimagen.com.co</p>
                                         <p style="font-size: 15px;">angel@videoimagen.com.co</p>
                                         <p style="font-size: 15px;">valeria@videoimagen.com.co</p>
