Refactor index.html to update heading for company experience

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="client-wrap grid grid-cols-12 gap-10">
                         <div class="the-title text-left col-span-4 sm:col-span-2 res:col-span-12">
                             <h5 class="head-title-2" data-aos="fade-up"> /Empresas </h5>
-                            <h2 class="head-title-1"> Empresas con las que hemos trabajado
+                            <h2 class="head-title-1"> Experiencia comercial
                                 <span class="title-end">.</span>
                             </h2>
                         </div>
