--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                     <div class="container">
                         <div class="about-wrap">
                             <div class="about-img">
-                                <img src="img/about-img.png" alt="about-img">
+                                <img style="height: 800px; rotate:90deg; margin:auto" src="img/sobre-nosotros.jpg" alt="about-img">
                             </div>
                             <div class="about-text">
                                 <div class="the-title">
