--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="video-background">
                     <video autoplay muted loop id="myVideo">
-                        <source src="img/concert-loop.mp4" type="video/mp4">
+                        <source src="img/Concert-Loop2.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -142,13 +142,13 @@
                             </div>
                             <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
                                 <a href="#">
-                                    <img style="height: 200px; object-fit: contain;" src="img/logo_company/2.png"
+                                    <img style="height: 180px; object-fit: contain; margin:auto;" src="img/logo_company/2.png"
                                         alt="client-2">
                                 </a>
                             </div>
                             <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
                                 <a href="#">
-                                    <img style="height: 200px; object-fit: contain;" src="img/logo_company/3.png"
+                                    <img style="height: 200px; object-fit: contain; margin: auto;" src="img/logo_company/3.png"
                                         alt="client-3">
                                 </a>
                             </div>
@@ -158,9 +158,9 @@
                                         alt="client-4">
                                 </a>
                             </div>
-                            <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
+                            <div class="client-content col-span-2 sm:col-span-6 res:col-span-6 ">
                                 <a href="#">
-                                    <img style="height: 200px; object-fit: contain;" src="img/logo_company/5.png"
+                                    <img style="height: 130px; object-fit: contain; margin: auto;" src="img/logo_company/5.png"
                                         alt="client-5">
                                 </a>
                             </div>
